--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "bootstrap": "4.3.1",
     "jquery": "3.4.0",
     "react": "^16.4.1",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.4.1",
     "react-router": "4.3.1",
     "react-router-dom": "4.3.1",
